# junit-report-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sample-test-results.xml
.github/workflows/: docker-publish.yml  publish.yml
examples/: sample-junit.xml
junit_html_report_generator/: __init__.py  cli.py  generator.py
junit_html_report_generator/templates/: dark.html  legacy.html  minimal.html  modern.html
junit_report_generator/: __init__.py  cli.py  generator.py  parser.py
junit_report_generator/templates/: basic.html  dark.html  detailed.html  legacy.html  minimal.html  modern.html
tests/: test_parser.py
